--- a/GSM00200Back/GSM00200Back.vbproj
+++ b/GSM00200Back/GSM00200Back.vbproj
@@ -11,13 +11,13 @@
 
   <ItemGroup>
     <Reference Include="R_APIBackEnd">
-      <HintPath>..\..\RuntimeLibrary\Back\R_APIBackEnd.dll</HintPath>
+      <HintPath>..\RuntimeLibrary\Back\R_APIBackEnd.dll</HintPath>
     </Reference>
     <Reference Include="R_APICommon">
-      <HintPath>..\..\RuntimeLibrary\Back\R_APICommon.dll</HintPath>
+      <HintPath>..\RuntimeLibrary\Back\R_APICommon.dll</HintPath>
     </Reference>
     <Reference Include="R_CommonFrontBackAPI">
-      <HintPath>..\..\RuntimeLibrary\Back\R_CommonFrontBackAPI.dll</HintPath>
+      <HintPath>..\RuntimeLibrary\Back\R_CommonFrontBackAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
 
