--- a/GSM00200Service/GSM00200Service.csproj
+++ b/GSM00200Service/GSM00200Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -19,13 +19,13 @@
 
     <ItemGroup>
     <Reference Include="R_APIBackEnd">
-        <HintPath>..\..\RuntimeLibrary\Back\R_APIBackEnd.dll</HintPath>
+        <HintPath>..\RuntimeLibrary\Back\R_APIBackEnd.dll</HintPath>
     </Reference>
     <Reference Include="R_APICommon">
-        <HintPath>..\..\RuntimeLibrary\Back\R_APICommon.dll</HintPath>
+        <HintPath>..\RuntimeLibrary\Back\R_APICommon.dll</HintPath>
     </Reference>
     <Reference Include="R_CommonFrontBackAPI">
-        <HintPath>..\..\RuntimeLibrary\Back\R_CommonFrontBackAPI.dll</HintPath>
+        <HintPath>..\RuntimeLibrary\Back\R_CommonFrontBackAPI.dll</HintPath>
     </Reference>
     </ItemGroup>
 
